--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1036.0",
+    "aws-sdk": "^2.1037.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.15",
     "sharp": "^0.29.3",
     "vuforia-api": "^0.3.1"
