--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ar-task",
+  "name": "ar-media-panel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,12 +10,12 @@
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "image-to-base64": "^2.2.0",
+    "jimp": "^0.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "sharp": "^0.29.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
