--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1037.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
-    "sharp": "^0.29.3",
     "vuforia-api": "^0.3.1"
   }
 }
