--- a/package.json
+++ b/package.json
@@ -8,14 +8,25 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-sdk": "^2.1036.0",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "express-async-handler": "^1.2.0",
     "image-to-base64": "^2.2.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mdbootstrap": "^4.20.0",
+    "mongoose": "^6.0.13",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
+    "react-toastify": "^8.1.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
