--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
     "vuforia-api": "^0.3.1"
   }
