--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
