--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "date-and-time": "^2.0.1",
     "express-async-handler": "^1.2.0",
     "image-to-base64": "^2.2.0",
     "jimp": "^0.16.1",
@@ -21,7 +22,6 @@
     "react-bootstrap": "^2.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
-    "react-moment": "^1.1.1",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
